lavc/libx264: Cast bit_rate to int64_t to avoid an integer overflow.

Fixes ticket #8071.